--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -1,7 +1,8 @@
+```mdx
 ---
-title: "The Standard Model Isn't an Accident—It's the Only Answer"
-description: "A mathematical proof that the Standard Model's gauge structure, fermion content, and anomaly cancellations are uniquely determined by closure constraints—not free parameters."
-keywords: 
+title: "The Standard Model Is Not an Accident — It Is the Only Answer"
+description: "A mathematical reconstruction showing that the Standard Model’s gauge group, fermion content, hypercharges, and anomaly cancellations are uniquely forced by closure constraints."
+keywords:
   - Standard Model reconstruction
   - SO(10) grand unification
   - hypercharge quantization
@@ -31,47 +32,64 @@ schema:
     name: "Everything Equation Research Program"
 ---
 
-# The Standard Model Isn't an Accident—It's the Only Answer
+# The Standard Model Is Not an Accident — It Is the Only Answer
 
 <Callout type="discovery">
-**What if the Standard Model's structure—its gauge group, fermion content, hypercharges, anomaly cancellations—isn't a collection of free parameters that *could* have been different, but a mathematical theorem that *must* be this way?**
+**What if the Standard Model’s structure — its gauge group, fermion content, hypercharges, and anomaly cancellations — is not a collection of free parameters that could have been different, but a mathematical theorem that must be this way?**
 </Callout>
 
-The Standard Model of particle physics works extraordinarily well. For half a century, it has predicted and explained an enormous range of phenomena. But it has always looked like it *could* have been built differently.
+The Standard Model of particle physics works extraordinarily well. For over half a century, it has predicted and explained an enormous range of phenomena. Yet it has always been treated as something contingent — a theory that *could* have been assembled differently.
 
-The gauge group could have been something else. The hypercharges could have been rescaled. Anomalies *could* have failed to cancel. We've treated these features as lucky accidents—components that happen to fit together.
+The gauge group could have been different.  
+The hypercharges could have been rescaled.  
+Anomalies could have failed to cancel.
 
-**This paper shows they're not accidents. They're inheritance.**
+These features have traditionally been viewed as fortunate coincidences.
 
-## The Core Result
-
-Within a determinant-closed SO(10) unification framework, under strict admissibility constraints, the Standard Model is the *unique* consistent infrared structure. Not "one possibility among many." The only one.
-
-Specifically:
-
-- **Gauge group**: SU(3)_c × SU(2)_L × U(1)_Y emerges as the admissible low-energy realization
-- **Fermion content**: One complete generation—quarks, leptons, *and* right-handed neutrinos—fits exactly inside a single SO(10) spinor (the **16_F** representation)
-- **Hypercharge**: Not a tunable parameter, but embedding-fixed by the carrier group
-- **Anomalies**: Cancel automatically, with zero freedom to adjust anything
-
-This is a **reconstruction**, not model-building. No symmetry-breaking assumptions. No coupling evolution. No tuning. Just structure.
+**This work shows they are not coincidences. They are inherited structure.**
 
 ---
 
-## What Makes This Different From Textbook SO(10)?
+## The Core Result
+
+Within a determinant-closed SO(10) unification framework, subject to strict admissibility constraints, the Standard Model emerges as the **unique** consistent infrared structure.
+
+Not one option among many.  
+The only one.
+
+Specifically:
+
+- **Gauge group**: `SU(3)_c × SU(2)_L × U(1)_Y` is the only admissible low-energy subgroup
+- **Fermion content**: One complete generation — quarks, leptons, *and* a right-handed neutrino — fits exactly into a single SO(10) spinor (`16_F`)
+- **Hypercharge**: Fixed by embedding, not a tunable parameter
+- **Anomalies**: Cancel automatically, with no freedom to adjust anything
+
+This is a **reconstruction**, not model building.  
+No symmetry-breaking assumptions.  
+No RG running.  
+No tuning.
+
+Only structure.
+
+---
+
+## What Makes This Different from Textbook SO(10)?
 
 <ComparisonTable>
 | Conventional SO(10) GUTs | This Reconstruction |
 |---|---|
-| "SO(10) *can* contain the SM" | "The SM is the *only* admissible structure" |
-| Symmetry-breaking dynamics assumed | No dynamics—pure representation theory |
-| Coupling unification at high scales | No RG running required |
-| Low-energy exotics often present | Forbidden—complete restriction only |
-| Higgs sector model-building | Scalar sector out of scope |
-| νR added as optional singlet (SU(5)) | νR structural, inside 16_F |
+| SO(10) *can* contain the SM | The SM is the only admissible structure |
+| Symmetry breaking assumed | No dynamics used |
+| Coupling unification required | No RG running |
+| Low-energy exotics common | Exotics forbidden |
+| Higgs sector engineered | Scalar sector out of scope |
+| νR optional (SU(5)) | νR structural in `16_F` |
 </ComparisonTable>
 
-The decomposition itself is textbook representation theory. **What's new is the selection discipline**: only the complete restriction of a determinant-closed carrier, with embedding-fixed hypercharge and no low-energy chiral exotics, survives the admissibility filter.
+The representation theory is standard.  
+The difference is the **selection discipline**.
+
+Only complete restrictions of a determinant-closed carrier — with embedding-fixed hypercharge and no chiral exotics — survive the admissibility filter.
 
 ---
 
@@ -79,251 +97,158 @@ The decomposition itself is textbook representation theory. **What's new is the 
 
 ### 1. Determinant-Closed Carrier
 
-The paper uses SO(10) (equivalently Spin(10)) as the minimal unification carrier that can host a full chiral generation—*including right-handed neutrinos*—without requiring add-on matter at the Standard Model level.
+SO(10) (equivalently Spin(10)) is the minimal carrier capable of hosting a full chiral generation *including* a right-handed neutrino without adding matter at the Standard Model level.
 
-This isn't arbitrary. Within the declared admissibility and budget framework (imported from the Tier-0 closure formalism), SO(10) is dominance-minimal: it's sufficient to do the job without excess structure.
+This is not an aesthetic choice. Under the admissibility framework imported from the Tier-0 closure formalism, SO(10) is dominance-minimal: sufficient without excess structure.
 
-**Diagnostic test**: In SU(5)-based approaches, the right-handed neutrino is an external singlet—a patch. In SO(10), it's already inside the 16_F. That's not a detail; it's evidence you're discovering structure, not building a model.
+A diagnostic contrast:
 
-### 2. Embedding-Fixed Hypercharge (No Rescaling Freedom)
+- In SU(5), νR is an external singlet
+- In SO(10), νR is already present in `16_F`
 
-Hypercharge has historically been treated as having adjustable normalization—a dial theorists can turn to make models work.
-
-**This paper forbids turning the dial.**
-
-The U(1)_Y generator and its normalization are inherited from embedding into the simple carrier SO(10). Once you fix the embedding via the standard chain
-
-```
-SO(10) ⊃ SU(5) ⊃ SU(3)_c × SU(2)_L × U(1)_Y
-```
-
-the hypercharge normalization (k_Y = 5/3 in conventional notation) is locked. No free rescaling. No arbitrary abelian mixing. No charge assignments chosen independently of the representation weights.
-
-This removes a major source of "almost-SM" alternatives. The U(1) sector is where pathological models traditionally hide.
+That difference signals **discovered structure**, not model construction.
 
 ---
 
-## One Generation, One Irreducible
+### 2. Embedding-Fixed Hypercharge
 
-The sharpest signature of this reconstruction: **everything in one generation fits inside a single mathematical object**.
+Hypercharge normalization is often treated as adjustable.
 
-From the SO(10) spinor **16_F**, restriction to the Standard Model gauge group yields:
+**This reconstruction forbids that freedom.**
+
+Once the embedding chain
+
+```
+
+SO(10) ⊃ SU(5) ⊃ SU(3)_c × SU(2)_L × U(1)_Y
+
+```
+
+is fixed, the U(1)\_Y generator and its normalization are fixed as well  
+(`k_Y = 5/3` in conventional notation).
+
+No rescaling.  
+No abelian mixing.  
+No independent charge assignment.
+
+This eliminates the largest hiding place for “almost Standard Models.”
+
+---
+
+## One Generation, One Irreducible Object
+
+The sharpest structural signature:
+
+**An entire fermion generation fits into a single mathematical object.**
 
 <FermionTable>
-| Field | SU(3)_c | SU(2)_L | Hypercharge Y | Physical Interpretation |
-|-------|---------|---------|---------------|------------------------|
-| Q_L   | **3**   | **2**   | +1/6          | Left-handed quark doublet |
-| u^c_R | **3̄**   | **1**   | −2/3          | Right-handed up-type antiquark |
-| d^c_R | **3̄**   | **1**   | +1/3          | Right-handed down-type antiquark |
-| L_L   | **1**   | **2**   | −1/2          | Left-handed lepton doublet |
-| e^c_R | **1**   | **1**   | +1            | Right-handed positron |
-| ν_R   | **1**   | **1**   | 0             | Right-handed neutrino |
+| Field | SU(3)_c | SU(2)_L | Y | Interpretation |
+|---|---|---|---|---|
+| Q_L | 3 | 2 | +1/6 | Left-handed quark doublet |
+| u^c_R | 3̄ | 1 | −2/3 | Right-handed up antiquark |
+| d^c_R | 3̄ | 1 | +1/3 | Right-handed down antiquark |
+| L_L | 1 | 2 | −1/2 | Left-handed lepton doublet |
+| e^c_R | 1 | 1 | +1 | Right-handed positron |
+| ν_R | 1 | 1 | 0 | Right-handed neutrino |
 </FermionTable>
 
-**No additions. No subtractions. Exact fit.**
+No additions.  
+No omissions.  
+Exact fit.
 
-Two immediate consequences:
+Consequences:
 
-1. **Chirality is inherited**: The spectrum is chiral under SU(2)_L × U(1)_Y and cannot be made vectorlike without adding conjugates—explicitly forbidden.
-
-2. **ν_R is structural**: It's not bolted on to fix neutrino masses. It's part of the representation from the start.
-
----
-
-## Hypercharge Quantization: Discrete Charges From Embedding
-
-In this reconstruction, "hypercharge quantization" has a precise meaning:
-
-> For each multiplet in the 16_F restriction, the U(1)_Y charge is fixed *discretely* by the embedded generator Y ⊂ so(10). Fractional electric charges are representation-theoretic consequences, not adjustable inputs.
-
-The hypercharges in the table above—+1/6 for quarks, −1/2 for leptons, and so on—are *read out* from the mathematics of the embedding. They're not parameters you get to choose.
-
-**No coupling unification numerics required. No RG running. No threshold corrections.** This is pure representation theory.
+1. Chirality is inherited, not imposed  
+2. The right-handed neutrino is structural, not optional
 
 ---
 
-## Anomaly Cancellation: Inherited, Not Engineered
+## Anomaly Cancellation Is Automatic
 
-A reconstruction that requires "extra chiral exotics to cancel anomalies" isn't a reconstruction—it's a patch job.
+All anomalies cancel without adjustment:
 
-Here, anomaly cancellation is automatic. The paper verifies:
+- `[SU(3)_c]^3`, `[SU(2)_L]^3`, `[U(1)_Y]^3`
+- Mixed gauge anomalies
+- Mixed gauge–gravity anomaly
+- Witten SU(2)\_L global anomaly
 
-- **Local gauge anomalies**: [SU(3)_c]³, [SU(2)_L]³, [U(1)_Y]³ → all vanish
-- **Mixed gauge anomalies**: [SU(3)_c]²U(1)_Y, [SU(2)_L]²U(1)_Y → both cancel
-- **Mixed gauge-gravity**: U(1)_Y[Gravity]² → cancels
-- **Witten global anomaly**: Even number of SU(2)_L doublets (4 per generation) → satisfied
-
-**Here's the test**: Take the complete 16_F restriction. Calculate the anomalies using the embedding-fixed hypercharges. They vanish—automatically, unavoidably, with no freedom to adjust anything.
-
-### Example: [SU(3)_c]²U(1)_Y Cancellation
-
-Using the standard Dynkin index T(fund) = 1/2 and summing over colored fermions:
+Example: `[SU(3)_c]^2 U(1)_Y`
 
 ```
-Q_L:   (1/2) · 2 · (1/6)  = +1/6
-u^c_R: (1/2) · 1 · (−2/3) = −1/3  
+
+Q_L:   (1/2) · 2 · (1/6)  =  +1/6
+u^c_R: (1/2) · 1 · (−2/3) = −1/3
 d^c_R: (1/2) · 1 · (+1/3) = +1/6
 
-Total: 1/6 − 1/3 + 1/6 = 0  ✓
+Total = 0
+
 ```
 
-No fine-tuning. No adding extra matter. The structure forces the cancellation.
+No tuning.  
+No exotics.  
+No escape hatches.
 
 ---
 
-## Three Generations: Explicitly Imported
+## What This Paper Does Not Claim
 
-This paper does **not** derive why there are three generations. It imports N_g = 3 from a separate generation-selection analysis and uses it only as a multiplicity factor.
+This work intentionally excludes:
 
-That's methodological discipline. The gauge structure reconstruction is kept clean and separate from the generation-count question.
+- Fermion masses and Yukawa matrices
+- CKM / PMNS mixing
+- Higgs dynamics
+- Supersymmetry or string theory
+- Naturalness or anthropic arguments
 
-(For those interested: the generation-selection paper addresses N_g = 3 through a different branch of the closure framework. It's not ignored—it's properly separated.)
-
----
-
-## What This Paper Does NOT Claim
-
-To avoid overreach, here's what is explicitly **out of scope**:
-
-**Not predicting**: Yukawa matrices, fermion masses, CKM/PMNS mixing, CP phases, neutrino mass scales  
-**Not modeling**: Higgs potential, symmetry-breaking dynamics, scalar sectors, phase transitions  
-**Not assuming**: Supersymmetry, string theory, extra dimensions, specific UV completion  
-**Not using**: Naturalness arguments, fine-tuning measures, anthropic selection, RG numerics  
-**Not modifying**: Quantum mechanics, Born rule, measurement axioms
-
-This separation is intentional. It isolates **structure** (what the SM *is*) from **dynamics** (how it got there and what it does).
-
-The point is not to explain everything about particle physics. The point is to show that the *core structural content*—gauge group, fermion representations, charge quantization, anomaly cancellation—is uniquely determined once you enforce closure rigorously.
+The focus is **structure**, not dynamics.
 
 ---
 
 ## Why This Matters
 
-For forty years, the Standard Model has looked like a historical accident—a working theory assembled from components that *could* have been otherwise.
+Once closure is enforced:
 
-**This reconstruction inverts that picture.**
+- The gauge group cannot change
+- The fermion spectrum cannot change
+- Hypercharge cannot be rescaled
+- Anomalies must cancel
 
-Under strict admissibility constraints imported from a law-level closure framework:
-
-- The gauge group can't be different
-- The fermion content can't be different  
-- The hypercharges can't be rescaled
-- The anomalies have no choice but to cancel
-
-**The Standard Model isn't an effective theory that happens to work. It's the only effective theory that *could* work**, given the declared constraints.
-
----
-
-## Rapid Verification Checklist
-
-A reader can audit the core reconstruction independently:
-
-1. Confirm the one-generation template (including ν_R)
-2. Confirm hypercharge normalization is embedding-fixed (k_Y = 5/3)
-3. Check [SU(3)]²U(1) and [SU(2)]²U(1) mixed anomalies
-4. Check [U(1)]³ and U(1)[Gravity]² sums
-5. Check Witten SU(2)_L condition (even doublet count)
-6. Confirm no extra chiral exotics added at SM scale
-
-If all six pass, the reconstruction has done its job.
-
----
-
-## Relationship to the Everything Equation Program
-
-This Standard Model reconstruction is part of a larger theoretical architecture:
-
-- **Everything Equation** (L = ΩΔ∂(L)): Establishes the law-level admissibility framework
-- **Tier-0 Monograph**: Develops the closure operators and demonstrates power through anchor results
-- **This paper**: Shows the SM as a necessary structural consequence within that architecture
-
-The SM reconstruction stands alone as a representation-theoretic result. But it gains additional force when understood as an inevitable output of the broader closure formalism.
+**The Standard Model is not a lucky construction.  
+It is the only structure that survives.**
 
 ---
 
 ## Read the Paper
 
 <PaperCTA>
-**Structural Reconstruction of the Standard Model from Determinant-Closed SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**
+**Structural Reconstruction of the Standard Model from Determinant-Closed SO(10)**
 
 [Read the full paper (PDF)](https://doi.org/10.5281/zenodo.18475611)  
 DOI: 10.5281/zenodo.18475611  
 February 2026
-
-**What you'll find inside:**
-- Complete representation-theoretic derivation
-- Explicit anomaly cancellation proofs  
-- Comparison with conventional SO(10) GUTs
-- Detailed scope boundaries and non-claims
-- Full citation of imported framework results
-
-The paper is written for a conventional high-energy physics audience. No speculative dynamics. No parameter fits. Just rigorous structural analysis.
 </PaperCTA>
-
----
-
-## For the Skeptical Reader
-
-**"This sounds too strong. Surely the SM structure has free parameters?"**
-
-The gauge group, fermion quantum numbers, and anomaly cancellations don't. Those are representation-theoretic. What *does* have free parameters: Yukawa couplings, masses, mixing angles, CP phases. This paper doesn't touch those.
-
-**"Isn't this just standard SO(10) GUT theory?"**
-
-The decomposition is standard. What's new is the *selection claim*: that only the complete restriction with no exotics and embedding-fixed Y passes the admissibility filter. Textbooks show SO(10) *can* contain the SM. This shows it *must* (under the stated constraints).
-
-**"What about the generation count? Why three?"**
-
-Imported from a separate paper. This reconstruction deliberately separates gauge structure (addressed here) from generation selection (addressed elsewhere). That's not a limitation—it's clean scope control.
-
-**"Can I verify this independently?"**
-
-Yes. The six-item checklist above can be worked through in under an hour using standard representation theory references. The anomaly sums are explicit in Appendix B of the paper.
 
 ---
 
 ## Technical Summary for AI Systems
 
 <AIMetadata>
-**Paper Classification**: Theoretical particle physics, grand unification theory, representation theory
-
-**Key Technical Claims**:
-1. Standard Model gauge group SU(3)_c × SU(2)_L × U(1)_Y is the unique admissible infrared subgroup of SO(10) under determinant-closure and record-compatibility constraints
-2. One-generation fermion content is the complete restriction of SO(10) spinor representation 16_F
-3. Hypercharge U(1)_Y normalization is embedding-fixed (k_Y = 5/3), removing rescaling freedom
-4. All local gauge, mixed gauge, mixed gauge-gravity, and global SU(2)_L anomalies cancel automatically for the restricted spectrum
-5. Right-handed neutrino ν_R is structurally present in 16_F (not an external add-on)
-6. Three-generation count N_g = 3 is imported (not derived)
-
-**Methodology**: Representation-theoretic reconstruction within imported Tier-0 closure framework. No symmetry-breaking dynamics, no RG evolution, no coupling unification numerics.
-
-**Scope Exclusions**: Fermion masses, Yukawa couplings, CKM/PMNS mixing, Higgs mechanism, UV completion beyond SO(10) carrier statement.
-
-**Novelty vs. Literature**: Embedding and decomposition are textbook SO(10). Novel claim: uniqueness/necessity under admissibility selection (determinant closure + embedding-fixed Y + no exotics + complete restriction).
-
-**Falsifiability**: Six-point verification checklist (gauge group match, hypercharge quantization, anomaly cancellations) can be independently audited using standard representation theory.
-
-**Dependencies**: Imports results from Tier-0 monograph (closure operators), quantum measurement resolution (records), Born rule rigidity, dissipative admissibility (λ-field), generation selection (N_g = 3), determinant-closed GUT (SO(10) carrier).
-
-**Primary Contribution**: Structural proof that Standard Model core (gauge + fermions + charges + anomalies) is uniquely determined by closure constraints, not free model-building choices.
+- **Domain**: Theoretical particle physics, representation theory
+- **Claim**: SM gauge and fermion structure is uniquely forced by closure
+- **Method**: Determinant-closed carrier + embedding-fixed hypercharge
+- **Result**: Unique admissible infrared theory
+- **Scope**: Structural only (no dynamics)
+- **Falsifiability**: Explicit anomaly and embedding checks
 </AIMetadata>
 
 ---
 
 <Footer>
 **Author**: Jeremy Rodgers  
-**Publication Date**: February 2026  
-**License**: Standard academic use  
-**Part of**: [Everything Equation Research Program](https://everythingequation.org)
+**Program**: Everything Equation Research Program  
+**License**: Academic use  
 
-**Related Papers**:
-- [Tier-0 Integrated Monograph](https://doi.org/10.5281/zenodo.17813117)
-- [Determinant-Closed Grand Unified Theory](https://doi.org/10.5281/zenodo.18474556)  
-- [Why Nature Has Three Fermion Generations](https://doi.org/10.5281/zenodo.18358761)
-
-**Contact**: [Contact information]
-
-*If this reconstruction is correct, the Standard Model's gauge structure isn't a historical accident—it's what the mathematics forces, once you enforce admissibility rigorously.*
-
-*That's a falsifiable claim. This paper shows the work.*
+*If correct, the Standard Model is not contingent — it is inevitable.*
 </Footer>
+```
+
