--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -1,7 +1,7 @@
-
+```mdx
 ---
-title: "The Standard Model Is Not an Accident — It Is the Only Answer"
-description: "A mathematical reconstruction showing that the Standard Model’s gauge group, fermion content, hypercharges, and anomaly cancellations are uniquely forced by closure constraints."
+title: "The Standard Model Isn’t an Accident — It’s the Only Admissible Answer"
+description: "A reconstruction claim: under determinant-closure + strict admissibility, the Standard Model gauge group and one-generation chiral spectrum are forced as the complete restriction of a single SO(10) spinor, with embedding-fixed hypercharge and automatic anomaly cancellation."
 keywords:
   - Standard Model reconstruction
   - SO(10) grand unification
@@ -32,91 +32,85 @@ schema:
     name: "Everything Equation Research Program"
 ---
 
-# The Standard Model Is Not an Accident — It Is the Only Answer
+# The Standard Model Isn’t an Accident — It’s the Only Admissible Answer
 
 <Callout type="discovery">
-**What if the Standard Model’s structure — its gauge group, fermion content, hypercharges, and anomaly cancellations — is not a collection of free parameters that could have been different, but a mathematical theorem that must be this way?**
+**This is not “SO(10) can contain the Standard Model.”**  
+This is: **once determinant-closure and admissibility are enforced, the Standard Model is what survives — and “nearby” alternatives do not.**
 </Callout>
 
-The Standard Model of particle physics works extraordinarily well. For over half a century, it has predicted and explained an enormous range of phenomena. Yet it has always been treated as something contingent — a theory that *could* have been assembled differently.
+The Standard Model is an exceptionally successful infrared theory — and it is also structurally unforgiving. Algebra admits many “almost-SM” possibilities: altered gauge factors, rescaled hypercharge, extra chiral leftovers, anomaly fixes by hand. Historically we’ve treated the observed structure as contingent.
 
-The gauge group could have been different.  
-The hypercharges could have been rescaled.  
-Anomalies could have failed to cancel.
+This reconstruction makes the opposite claim:
 
-These features have traditionally been viewed as fortunate coincidences.
+> **Within a determinant-closed SO(10) carrier, under a strict admissibility discipline, the infrared Standard Model gauge group and one-generation chiral fermion content arise as an inherited consequence of the complete restriction of a single SO(10) spinor `16_F`, with embedding-fixed hypercharge and automatic anomaly cancellation.**
 
-**This work shows they are not coincidences. They are inherited structure.**
+No symmetry-breaking history is assumed. No RG numerics. No Yukawas or masses. No “UV storytelling.”
 
----
-
-## The Core Result
-
-Within a determinant-closed SO(10) unification framework, subject to strict admissibility constraints, the Standard Model emerges as the **unique** consistent infrared structure.
-
-Not one option among many.  
-The only one.
-
-Specifically:
-
-- **Gauge group**: `SU(3)_c × SU(2)_L × U(1)_Y` is the only admissible low-energy subgroup
-- **Fermion content**: One complete generation — quarks, leptons, *and* a right-handed neutrino — fits exactly into a single SO(10) spinor (`16_F`)
-- **Hypercharge**: Fixed by embedding, not a tunable parameter
-- **Anomalies**: Cancel automatically, with no freedom to adjust anything
-
-This is a **reconstruction**, not model building.  
-No symmetry-breaking assumptions.  
-No RG running.  
-No tuning.
-
-Only structure.
+Just: **carrier → restriction → forced infrared record.**
 
 ---
 
-## What Makes This Different from Textbook SO(10)?
+## What is being reconstructed (and what is not)
 
-<ComparisonTable>
-| Conventional SO(10) GUTs | This Reconstruction |
-|---|---|
-| SO(10) *can* contain the SM | The SM is the only admissible structure |
-| Symmetry breaking assumed | No dynamics used |
-| Coupling unification required | No RG running |
-| Low-energy exotics common | Exotics forbidden |
-| Higgs sector engineered | Scalar sector out of scope |
-| νR optional (SU(5)) | νR structural in `16_F` |
-</ComparisonTable>
+What is reconstructed:
 
-The representation theory is standard.  
-The difference is the **selection discipline**.
+- Gauge group: `SU(3)_c × SU(2)_L × U(1)_Y`
+- One-generation chiral fermion content (LH Weyl), **including** a right-handed neutrino `ν_R`
+- Hypercharge quantization and normalization (**not** treated as tunable)
+- Cancellation of all relevant 4D anomalies: local gauge, mixed gauge, mixed gauge–gravity, and Witten’s `SU(2)_L` global anomaly
 
-Only complete restrictions of a determinant-closed carrier — with embedding-fixed hypercharge and no chiral exotics — survive the admissibility filter.
+What is not reconstructed (explicitly excluded):
 
----
+- Yukawa matrices, masses, mixings, CP phases
+- Higgs/scalar sector model-building
+- Symmetry-breaking dynamics
+- Threshold corrections, coupling unification numerics, RG running
+- Any speculative UV completion beyond the carrier statement
 
-## The Two Constraints That Lock Everything
-
-### 1. Determinant-Closed Carrier
-
-SO(10) (equivalently Spin(10)) is the minimal carrier capable of hosting a full chiral generation *including* a right-handed neutrino without adding matter at the Standard Model level.
-
-This is not an aesthetic choice. Under the admissibility framework imported from the Tier-0 closure formalism, SO(10) is dominance-minimal: sufficient without excess structure.
-
-A diagnostic contrast:
-
-- In SU(5), νR is an external singlet
-- In SO(10), νR is already present in `16_F`
-
-That difference signals **discovered structure**, not model construction.
+This is intentional: it isolates **structure** from **dynamics**.
 
 ---
 
-### 2. Embedding-Fixed Hypercharge
+## The reconstruction claim in one line
 
-Hypercharge normalization is often treated as adjustable.
+The textbook statement is: “SO(10) can contain the SM.”
 
-**This reconstruction forbids that freedom.**
+The reconstruction statement is:
 
-Once the embedding chain
+> **Once admissibility is used as a selection criterion, only the complete restriction of a determinant-closed carrier — with embedding-fixed hypercharge and no low-energy chiral exotics — passes the filter.**
+
+---
+
+## The two constraints that do the locking
+
+### 1) Determinant-closed carrier (imported)
+
+The paper imports the carrier selection: `SO(10)` (or `Spin(10)`) as dominance-minimal within the declared admissibility/budget discipline, with per-generation matter hosted in a single spinor `16_F`.
+
+This is used conservatively: **enough structure to host a full chiral generation (including `ν_R`) without low-energy chiral add-ons**, and no more.
+
+---
+
+### 2) Embedding-fixed hypercharge (no rescaling freedom)
+
+Hypercharge is where “almost-SM” models typically hide: rescale `Y`, mix abelian factors, patch charges.
+
+**That freedom is forbidden here.**
+
+Once the embedding is fixed, `U(1)_Y` is an *inherited generator*, with inherited normalization (conventionally `k_Y = 5/3`).
+
+No arbitrary rescaling.  
+No ad hoc abelian mixing.  
+No charge assignments chosen independently of weights.
+
+This single rule deletes an entire zoo of fake-nearby alternatives.
+
+---
+
+## The descent (used for restriction only)
+
+For representation bookkeeping, the reconstruction uses the standard chain:
 
 ```
 
@@ -124,132 +118,167 @@ SO(10) ⊃ SU(5) ⊃ SU(3)_c × SU(2)_L × U(1)_Y
 
 ```
 
-is fixed, the U(1)\_Y generator and its normalization are fixed as well  
-(`k_Y = 5/3` in conventional notation).
+(or the Pati–Salam route; representation-theoretically equivalent for fixing `Y` and decomposing `16_F`).
 
-No rescaling.  
-No abelian mixing.  
-No independent charge assignment.
-
-This eliminates the largest hiding place for “almost Standard Models.”
+This is **not** asserted as a symmetry-breaking history. It is used only to identify the embedded `U(1)_Y` generator and perform restriction.
 
 ---
 
-## One Generation, One Irreducible Object
+## One generation from one irreducible: `16_F`
 
-The sharpest structural signature:
+This is the sharpest structural signature:
 
-**An entire fermion generation fits into a single mathematical object.**
+- One full chiral generation is hosted by a single irreducible: `16_F`
+- The infrared spectrum is the **complete restriction** of `16_F` to `SU(3)_c × SU(2)_L × U(1)_Y`
+- No incomplete multiplets and no extra low-energy chiral exotics are permitted
 
-<FermionTable>
-| Field | SU(3)_c | SU(2)_L | Y | Interpretation |
-|---|---|---|---|---|
-| Q_L | 3 | 2 | +1/6 | Left-handed quark doublet |
-| u^c_R | 3̄ | 1 | −2/3 | Right-handed up antiquark |
-| d^c_R | 3̄ | 1 | +1/3 | Right-handed down antiquark |
-| L_L | 1 | 2 | −1/2 | Left-handed lepton doublet |
-| e^c_R | 1 | 1 | +1 | Right-handed positron |
-| ν_R | 1 | 1 | 0 | Right-handed neutrino |
-</FermionTable>
+The resulting one-generation template (LH Weyl notation) is:
 
-No additions.  
-No omissions.  
-Exact fit.
+- `Q_L : (3, 2)_{+1/6}`
+- `u^c_R : (3̄, 1)_{−2/3}`
+- `d^c_R : (3̄, 1)_{+1/3}`
+- `L_L : (1, 2)_{−1/2}`
+- `e^c_R : (1, 1)_{+1}`
+- `ν_R : (1, 1)_0`
 
-Consequences:
+Two consequences:
 
-1. Chirality is inherited, not imposed  
-2. The right-handed neutrino is structural, not optional
+1. **Chirality is inherited.** You do not get to “pair things up” without adding conjugates — which admissibility forbids at the SM scale.
+2. **`ν_R` is structural.** It is present because the representation forces it, not because neutrino masses demand it.
+
+#### Minimality signal: `ν_R` is not a bolt-on
+
+A clean diagnostic separating “hosting” from “patching”:
+
+- `SO(10): 16` (with `ν_R` internal)
+- `SU(5) (+ν_R): 10 ⊕ 5̄ ⊕ 1` (with `ν_R` appended)
+
+Under this reconstruction discipline, “append a singlet to fix it” is not allowed.
 
 ---
 
-## Anomaly Cancellation Is Automatic
+## Hypercharge quantization: discrete charges, not a dial
 
-All anomalies cancel without adjustment:
+Here “hypercharge quantization” is not a slogan. It means:
 
-- `[SU(3)_c]^3`, `[SU(2)_L]^3`, `[U(1)_Y]^3`
-- Mixed gauge anomalies
-- Mixed gauge–gravity anomaly
-- Witten SU(2)\_L global anomaly
+- `Y` is an embedded generator in `so(10)`
+- each multiplet’s `Y` is fixed discretely by representation weights
+- fractional electric charge is inherited, not tuned
 
-Example: `[SU(3)_c]^2 U(1)_Y`
+And crucially:
+
+- no `Y` rescaling  
+- no arbitrary `U(1)` mixing  
+- no use of coupling unification numerics or RG running required
+
+Charge structure is purely embedding + representation theory.
+
+---
+
+## Anomaly cancellation: inherited, not engineered
+
+A reconstruction that requires “extra chiral matter to cancel anomalies” is not a reconstruction — it is a repair job.
+
+Here anomaly cancellation is inherited from **completeness of the `16_F` restriction** with embedding-fixed hypercharge.
+
+The one-generation spectrum satisfies:
+
+- local gauge anomalies: `[SU(3)_c]^3`, `[SU(2)_L]^3`, `[U(1)_Y]^3`
+- mixed anomalies: `[SU(3)_c]^2 U(1)_Y`, `[SU(2)_L]^2 U(1)_Y`
+- mixed gauge–gravity: `U(1)_Y [Gravity]^2`
+- global: Witten `SU(2)_L` anomaly (even number of `SU(2)_L` doublets)
+
+### Explicit anomaly sums (one generation)
+
+#### `[SU(3)_c]^2 U(1)_Y`
+
+Using `T(fund) = 1/2`:
 
 ```
 
-Q_L:   (1/2) · 2 · (1/6)  =  +1/6
+Q_L:   (1/2) · 2 · ( 1/6) =  1/6
 u^c_R: (1/2) · 1 · (−2/3) = −1/3
-d^c_R: (1/2) · 1 · (+1/3) = +1/6
+d^c_R: (1/2) · 1 · ( 1/3) =  1/6
 
 Total = 0
 
 ```
 
-No tuning.  
-No exotics.  
-No escape hatches.
+#### `[SU(2)_L]^2 U(1)_Y`
 
----
+Sum over `SU(2)_L` doublets:
 
-## What This Paper Does Not Claim
-
-This work intentionally excludes:
-
-- Fermion masses and Yukawa matrices
-- CKM / PMNS mixing
-- Higgs dynamics
-- Supersymmetry or string theory
-- Naturalness or anthropic arguments
-
-The focus is **structure**, not dynamics.
-
----
-
-## Why This Matters
-
-Once closure is enforced:
-
-- The gauge group cannot change
-- The fermion spectrum cannot change
-- Hypercharge cannot be rescaled
-- Anomalies must cancel
-
-**The Standard Model is not a lucky construction.  
-It is the only structure that survives.**
-
----
-
-## Read the Paper
-
-<PaperCTA>
-**Structural Reconstruction of the Standard Model from Determinant-Closed SO(10)**
-
-[Read the full paper (PDF)](https://doi.org/10.5281/zenodo.18475611)  
-DOI: 10.5281/zenodo.18475611  
-February 2026
-</PaperCTA>
-
----
-
-## Technical Summary for AI Systems
-
-<AIMetadata>
-- **Domain**: Theoretical particle physics, representation theory
-- **Claim**: SM gauge and fermion structure is uniquely forced by closure
-- **Method**: Determinant-closed carrier + embedding-fixed hypercharge
-- **Result**: Unique admissible infrared theory
-- **Scope**: Structural only (no dynamics)
-- **Falsifiability**: Explicit anomaly and embedding checks
-</AIMetadata>
-
----
-
-<Footer>
-**Author**: Jeremy Rodgers  
-**Program**: Everything Equation Research Program  
-**License**: Academic use  
-
-*If correct, the Standard Model is not contingent — it is inevitable.*
-</Footer>
 ```
 
+Q_L: (1/2) · 3 · ( 1/6) =  1/4
+L_L: (1/2) · 1 · (−1/2) = −1/4
 
+Total = 0
+
+```
+
+#### Witten `SU(2)_L` global anomaly
+
+Per generation:
+
+- `Q_L` contributes 3 doublets (one per color)
+- `L_L` contributes 1 doublet
+
+Total doublets = 4 (even) ⇒ global anomaly condition satisfied.
+
+These are not “imposed.” They are consequences of the fixed spectrum.
+
+---
+
+## Three generations: imported on purpose
+
+This paper does **not** derive the generation count. It imports `N_g = 3` and uses it only as a multiplicity factor (anomalies cancel additively).
+
+That separation is not a weakness — it is discipline. It keeps the reconstruction result clean.
+
+---
+
+## What is “resolution-like” about this (structurally)
+
+This has the markers of a resolution-class reconstruction:
+
+1. **Hard scope boundaries**  
+   Claims are narrow, explicit, and checkable.
+
+2. **Import discipline**  
+   Carrier selection, admissibility, and `N_g = 3` are treated as inputs, not re-litigated.
+
+3. **Necessity via exclusions**  
+   The admissibility filter forbids:
+   - extra unbroken gauge factors at the infrared record scale
+   - rescaling or mixing in the abelian sector
+   - low-energy chiral exotics to “fix” anomalies
+   - incomplete restriction of the carrier multiplet
+
+4. **One irreducible hosts one generation**  
+   `16_F` carries the full chiral record including `ν_R`; the SM spectrum is the complete restriction.
+
+This is the kind of claim an expert can audit without interpretation.
+
+---
+
+## Fast audit checklist (do it in under an hour)
+
+1. Verify the one-generation spectrum (including `ν_R`).
+2. Verify embedding-fixed hypercharge normalization (`k_Y = 5/3` convention).
+3. Check `[SU(3)]^2 U(1)` and `[SU(2)]^2 U(1)` cancellations.
+4. Check `[U(1)]^3` and `U(1)[Gravity]^2` sums.
+5. Check Witten `SU(2)_L` condition (even number of doublets).
+6. Confirm no extra chiral exotics were added at the SM scale.
+
+If these pass, the reconstruction has done exactly what it claims.
+
+---
+
+## Primary reference
+
+<PaperCTA>
+**Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**  
+DOI: [10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
+</PaperCTA>
+```
